# soundboard

./: .gitignore  Cargo.toml  README.md  README_GO.md  README_USER.md  build.bat  go.mod  go.sum  main.go  main.py  normalize_audio.py  requirements.txt  run.bat  start_soundboard.bat
pythonversion/: main.py  requirements.txt
pythonversion/templates/: index.html
src/: main.rs
static/: index.html
templates/: index.html  index_go.html
uploads/: .gitkeep
