[package]
name = "soundboard"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.2"
actix-files = "0.6"
actix-multipart = "0.6"
rodio = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"